# git-graphable

./: -  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HYGIENE.md  Justfile  README.md  SECURITY.md  STYLING.md  USAGE.md  action.yml  graph.html  pyproject.toml  test_pr.mmd
.github/: dependabot.yml
.github/actions/git-graphable/: action.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
examples/: EXAMPLES.md  generate_demos.py  index_template.html  publish_demos.py
report_output/: final_report.json  plus_metadata.json  report.html
src/git_graph/: __init__.py  cli.py  core.py  models.py  parser.py  styler.py
src/git_graphable/: __init__.py  bare_cli.py  cli.py  cli_utils.py  commands.py  core.py  default_config.toml  github.py  highlighter.py  hygiene.py  issues.py  models.py  parser.py  rich_cli.py  styler.py  templates.py
src/git_graphable/highlights/: core.py  external.py  hygiene.py  visual.py
src/git_graphable/issues/: __init__.py  base.py  github.py  gitlab.py  jira.py  script.py
src/git_graphable/prs/: __init__.py  base.py  github.py  gitlab.py  script.py
src/git_graphable/styling/: base.py  generic.py  html.py  mermaid.py
tests/: conftest.py  test_bare_cli.py  test_cli.py  test_cli_utils.py  test_commands.py  test_config.py  test_core.py  test_examples_html.py  test_github.py  test_highlighter.py  test_hygiene.py  test_hygiene_scorer.py  test_interactive_html.py  test_issues.py  test_models.py  test_parser.py  test_rich_cli.py  test_styler.py  test_ui_interactive.py
tests/highlights/: test_external.py  test_hygiene.py  test_visual.py
tests/hypothesis/: test_git_graph.py
tests/issues/: test_github.py  test_gitlab.py  test_jira_engine.py  test_script.py
tests/prs/: test_github.py  test_gitlab.py  test_script.py
tests/styling/: test_generic.py  test_mermaid.py
