[project]
authors = [
    { name = "Richard West", email = "dopplereffect.us@gmail.com" },
]
dependencies = [
    "graphable>=0.6.0",
]
description = "A powerful tool to convert Git commit history into beautiful flowcharts."
keywords = [
    "analysis",
    "d2",
    "git",
    "graph",
    "hygiene",
    "mermaid",
    "topology",
    "visualization",
]
name = "git-graphable"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
git-graphable = "git_graphable.cli:main"

[project.urls]
Homepage = "https://github.com/TheTrueSCU/git-graphable"
Issues = "https://github.com/TheTrueSCU/git-graphable/issues"
Repository = "https://github.com/TheTrueSCU/git-graphable"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-gitignore>=1.3",
    "pytest-html-plus>=0.5.0",
    "pytest-isort>=4.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "typer-cli>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/git_graphable"]

[tool.uv]
package = true

[tool.coverage.run]
omit = [
    "src/git_graphable/cli.py",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
